--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             padding: 10px;
         }
         .product-image img {
-            width: 100%;
+            width: 60%;
             max-width: 350px;
             height: auto;
-            margin-top: 20px;
+            margin-top: 80px;
         }
         table {
             width: 100%;
@@ -137,19 +137,19 @@
             <table>
                 <tr>
                     <th>Product</th>
-                    <td>Led Table Lamp</td>
+                    <td>Wood And Pp Fabric Woven Lantern</td>
                 </tr>
                 <tr>
                     <th>Product Code</th>
-                    <td>GB26272</td>
+                    <td>GB26072</td>
                 </tr>
                 <tr>
                     <th>Product Material</th>
-                    <td>Iron+Arcylic</td>
+                    <td>Wood,Pp</td>
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 16cm x Width 16cm x Height 28cm</td>
+                    <td>Length D17cm x Width 24Hcm x Height cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -157,7 +157,7 @@
                 </tr>
                 <tr>
                     <th>Product Weight</th>
-                    <td>Kg</td>
+                    <td>0.5Kg</td>
                 </tr>
                 <tr>
                     <th>Unit</th>
@@ -165,35 +165,35 @@
                 </tr>
                 <tr>
                     <th>Carton Size</th>
-                    <td>Length 57cm x Width 57cm x Height 66.5cmcm</td>
+                    <td>Length 75cm x Width 30cm x Height 53cm</td>
                 </tr>
                 <tr>
                     <th>Carton Quantity</th>
-                    <td>18</td>
+                    <td>12</td>
                 </tr>
                 <tr>
                     <th>Carton CBM</th>
-                    <td>0.216</td>
+                    <td>0.12</td>
                 </tr>
                 <tr>
                     <th>20 Ft Container Quantity</th>
-                    <td>2412 </td>
+                    <td>2592 </td>
                 </tr>
                 <tr>
                     <th>40 Ft Container Quantity</th>
-                    <td>4824 </td>
+                    <td>5592 </td>
                 </tr>
                 <tr>
                     <th>40 HQ Container Quantity</th>
-                    <td>5406 </td>
+                    <td>6492 </td>
                  </tr>
                 <tr>
                     <th>Price</th>
-                    <td price: > USD 7.41/Pcs</td>
+                    <td price: > USD 3.45/Pcs</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
-                    <td>Yantian, China</td>
+                    <td>Qingdao, China</td>
                 </tr>
                 <tr>
                     <th>More Details - Packaging PPT</th>
