--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length D17cm x Width 24Hcm x Height cm</td>
+                    <td>Dia 17cm x Height 24cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
